syntax = "proto3";

package rules;

message RuleResponse {
    enum Status {
        ERROR = 0;
        NOT_FRAUD = 1;
        FRAUD = 2;
    }

    string rule_uuid = 1;
    Status status = 2;
    string description = 3;
};